# resonance-knowledge

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  generate_blueprint.py  helper.md  knowledge.db
.claude/: settings.json
docs/: BUILD-SEQUENCE.md  CHECKLIST.md  CLAUDE-CONTEXT.md
docs/blueprints/: dbp_backend.ai.json  dbp_frontend.ai.json  pbp_resonance_compass.ai.json
docs/blueprints/layers/: obp_components.ai.json  obp_routes.ai.json  obp_rust_backend.ai.json  obp_stores.ai.json  obp_styles.ai.json
src/: db.rs  main.rs  query.rs
src/schema/: 001_initial.sql
src/seed/: seed.sql
